[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r1helpers"
version = "0.1.0"
description = "Helper functions for the mechanistic interpretability of r1-like reasoning models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["torch", "torchvision", "torchaudio", "transformers", "nnsight", "scikit-learn", "rich", "matplotlib", "pandas", "tqdm", "numpy"]


[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["r1helpers"]